[package]
name = "odata-params"
version = "0.4.1"
authors = ["Jenifer Champagne <jen@iferc.ca>"]
edition = "2021"
description = """
OData v4 query parameters parsers for handling paginated requests.
"""
repository = "https://github.com/JenChampagne/odata-params"
keywords = ["odata", "params", "parse", "pagination", "filters"]
license = "MIT OR Apache-2.0"
readme = "./README.md"
exclude = [".github", "examples"]

[features]
serde = [ "dep:serde", "bigdecimal/serde", "chrono/serde", "chrono-tz/serde", "uuid/serde" ]

[dependencies]
bigdecimal = "0.4"
chrono = "0.4"
chrono-tz = "0.9"
peg = "0.8"
serde = { version = "1.0.210", features = ["derive"], optional = true }
thiserror = "1.0.63"
uuid = "1.10"
